--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">Tian Song</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
+            <li><a href="work.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -75,7 +75,7 @@
 				    <br>
 				  </div>
 				  <div class="form-group">
-				    <input type="email" class="form-control" id="subjectEmail1" placeholder="Subject">
+				    <input type="text" class="form-control" id="subjectEmail1" placeholder="Subject">
 				    <br>
 				  </div>
 				  <textarea class="form-control" rows="6" placeholder="Enter your text here"></textarea>
@@ -111,8 +111,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About Stanley</h4>
-					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
+					<h4>About Tian</h4>
+					<p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
