small changes to index.

--- a/about.html
+++ b/about.html
@@ -99,14 +99,14 @@
 			
 			<div class="col-lg-6">
 				<h4>THE SKILLS</h4>
-				Wordpress
+				Javascript
 				<div class="progress">
 					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 						<span class="sr-only">60% Complete</span>
 					</div>
 				</div>
 
-				Photoshop
+				Node.js
 				<div class="progress">
 					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 						<span class="sr-only">80% Complete</span>
