--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="assets/img/user.png" alt="Stanley">
 					<h1>Hello, this is Tian</h1>
-					<p>Greetings. I'm Stanley, a free handsome bootstrap theme coded by BlackTie.co. A really simple theme for those wanting to showcase their work with a cute & clean style.</p>
-					<p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
-				
+					<p>Greetings. I'm an aspiring web app developer. This is my simplye website to showcase my work.</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
 	    </div> <!-- /container -->
