--- a/about.html
+++ b/about.html
@@ -56,9 +56,30 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="assets/img/user.png" alt="Stanley">
-					<h1>About Stanley!</h1>
-					<p>Hello everybody. I'm Stanley, a free handsome bootstrap theme coded by BlackTie.co. A really simple theme for those wanting to showcase their work with a cute & clean style.</p>
-					<p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
+					<h1>About Tian!</h1>
+					<p>Mission
+
+My enduring purpose for being on this earth is to strive for happiness, knowledge, satisfaction, and simply good living. I will seek out the best and most exiting experiences this planet has to offer. This includes enjoying all the pleasures while avoiding all the pains. To balance the hedonistic framework with obligations to society, family and friends. To follow my core values without ever have to compromise. To go wherever my heart desires and fulfill my dreams. To succeed in both personal and professional life. Lastly, to die with no regrets knowing perfectly well that I have yet to only scratch the surface of everything this life has to offer.
+
+Value
+
+Honesty – Being honest and truthful on everything
+
+Balance – Juggling between obligations, work, study, and pleasures
+
+Pleasure – Who doesn’t want to have fun?
+
+Knowledge – Knowledge is power
+
+Duty – Responsibility to my family, friends, work, and myself
+
+Wealth – Money can’t buy happiness? Agree to disagree; I’ll argue money is the access key to 98% of this planet
+
+Health – Can’t enjoy life being deathly sick
+
+External Perception
+
+My friends and family would most likely characterize me in a positive light. Given their bias, they would tend to overlook some of my shortcomings and perhaps overemphasize some of my more appealing qualities. Since I’m doing this exercise by myself, this answer is hardly more objective. For the sake of this assignment, let me suppose I am writing in the point of view of a conversation between an acquaintance and a stranger. If someone would’ve to describe me, I can postulate they would comment on my physical appearances quite accurately. I would be a bespectacled, tall, Asian, black-haired male with a quirky accent. After the brain registers the key word “Asian”, this imaginary friend will probably try to guess my nationality, which will not be that hard for him or her for I, being Chinese, belong to a nation with one fifth of Earth’s population. At this point of their conversation, the typical stereotypes of Asians will subtly sink in. The listener will find some of my personal qualities to be a mirror image of his or her expectations. Thank goodness I am part of the model minority. Although, unfortunately, I have to admit I do certainly exhibit the negative Asian stereotype as well. Now, after reaffirming the Asian stereotype, every personal detail about me simply becomes relegated to peripheral vision. If the acquaintance knew me a little bit better, the listener might raise a few eyebrows to unexpected discrepancies; however, none of these will likely to change their initial judgment. Now, as the reader of this paper, I think you have a pretty good grasp on how to perceive me. I understand I might have strayed from this self-branding exercise, yet I do not believe telling people that I am an honest fellow would establish my trustworthiness.</p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
