--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="assets/img/user.png" alt="Stanley">
-					<h1>Hello, this is Tian</h1>
+					<h1>Hello, this is Tian. Site is still under constructions.</h1>
 					<p>Greetings. I'm an aspiring web app developer. This is my simplye website to showcase my work.</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
