--- a/work01.html
+++ b/work01.html
@@ -80,11 +80,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Bunker</h4>
+					<h4>My Address</h4>
 					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
+						Some Number,<br/>
+						Some Street, <br/>
+						Portland, OR.
 					</p>
 				</div><!-- /col-lg-4 -->
 				
@@ -98,7 +98,7 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About Tian</h4>
+					<h4>About This Site</h4>
 					<p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
