--- a/about.html
+++ b/about.html
@@ -162,9 +162,9 @@ My friends and family would most likely characterize me in a positive light. Giv
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="#">Github</a><br/>
+						<a href="#">LinkedIn</a><br/>
+						<a href="#">Heroku</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
