--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="#">Github</a><br/>
+            <a href="#">LinkedIn</a><br/>
+            <a href="#">Heroku</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
