more editing on about page.

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ My friends and family would most likely characterize me in a positive light. Giv
 		<div class="row mt">
 			<div class="col-lg-6">
 				<h4>THE THINKING</h4>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+				<p>If you got this far and are still reading this, let me thank you for your curiousity and patience. If you simply scrolled down to this section, I oblige you to take a moment and learn a little about <a href="#">me</a>.</p>
 			</div><!-- /colg-lg-6 -->
 			
 			<div class="col-lg-6">
@@ -128,14 +128,14 @@ My friends and family would most likely characterize me in a positive light. Giv
 
 				Node.js
 				<div class="progress">
-					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
 						<span class="sr-only">80% Complete</span>
 					</div>
 				</div>
 				
 				HTML + CSS
 				<div class="progress">
-					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
 						<span class="sr-only">95% Complete</span>
 					</div>
 				</div>
@@ -162,9 +162,9 @@ My friends and family would most likely characterize me in a positive light. Giv
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Github</a><br/>
-						<a href="#">LinkedIn</a><br/>
-						<a href="#">Heroku</a>
+						<a href="https://github.com/songty">Github</a><br/>
+            <a href="https://www.linkedin.com/pub/tian-song/9b/917/b62">LinkedIn</a><br/>
+            <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
