--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Github</a><br/>
-            <a href="#">LinkedIn</a><br/>
-            <a href="#">Heroku</a>
+						<a href="https://github.com/songty">Github</a><br/>
+            <a href="https://www.linkedin.com/pub/tian-song/9b/917/b62">LinkedIn</a><br/>
+            <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
