--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>MY WORK</h3>
 				<hr>
-				<p>Show your work here. Dribbble shots from the awesome designer <a href="http://dribbble.com/wanderingbert">David Creighton-Pester</a>.</p>
+				<p>Show your work here. Dribbble shots from the awesome developer.</p>
 			</div>
 		</div>
 		<div class="row mt centered">	
@@ -110,9 +110,9 @@
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Github</a><br/>
-            <a href="#">LinkedIn</a><br/>
-            <a href="#">Heroku</a>
+						<a href="https://github.com/songty">Github</a><br/>
+            <a href="https://www.linkedin.com/pub/tian-song/9b/917/b62">LinkedIn</a><br/>
+            <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
