added google forms for submit. TODO: prettify it or find alternatives.

--- a/contact.html
+++ b/contact.html
@@ -57,32 +57,12 @@
 	<div class="container pt">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3 centered">
-				<h3>CONTACT ME</h3>
+				<h3>Questions?</h3>
 				<hr>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+				<p>TODO: Find alternative for form submit or tweak Google's iframe/form service. Perhaps query Google drive like a database?</p>
+        <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dFBVSEpHSVNfYzd2Y3Q4S09Gbm1Dd3c6MA" width="760" height="649" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			</div>
 		</div>
-		<div class="row mt">	
-			<div class="col-lg-8 col-lg-offset-2">
-				<form role="form">
-				  <div class="form-group">
-				    <input type="name" class="form-control" id="NameInputEmail1" placeholder="Your Name">
-				    <br>
-				  </div>
-				  <div class="form-group">
-				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-				    <br>
-				  </div>
-				  <div class="form-group">
-				    <input type="text" class="form-control" id="subjectEmail1" placeholder="Subject">
-				    <br>
-				  </div>
-				  <textarea class="form-control" rows="6" placeholder="Enter your text here"></textarea>
-				    <br>
-				  <button type="submit" class="btn btn-success">SUBMIT</button>
-				</form>    			
-			</div>
-		</div><!-- /row -->
 	</div><!-- /container -->
 	
 	
@@ -118,7 +98,6 @@
 		
 		</div>
 	</div>
-	
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
