added scrolling script for nav bar.

--- a/about.html
+++ b/about.html
@@ -183,5 +183,6 @@ My friends and family would most likely characterize me in a positive light. Giv
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/navscrollfloat.js"></script>
   </body>
 </html>
