--- a/work.html
+++ b/work.html
@@ -57,25 +57,25 @@
   <div class="container pt">
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
+        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
         <p>Swap-tacular</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
+        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
         <p>LunchOn!</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt="" /></a>
+        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
         <p>Infinite Interesting Scroll</p>
       </div>
     </div><!-- /row -->
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
+        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
         <p>Sudoku Solver</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="https://www.npmjs.org/package/static-site-generator-"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt="" /></a>
+        <a class="zoom green" href="https://www.npmjs.org/package/static-site-generator-"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
@@ -124,5 +124,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/navscrollfloat.js"></script>
   </body>
 </html>
