--- a/lunch.html
+++ b/lunch.html
@@ -57,7 +57,7 @@
   <div class="container pt">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>PROJECT NAME</h3>
+        <h3>Lunch On!</h3>
         <hr>
         <p>Currently still under construction.</p>
       </div>
@@ -70,12 +70,11 @@
         <div class="address"></div>
         <button type="submit" id="reload">Click HERE! Let's Load more results!</button>
         <div class="img"></div>
-
-        <div id="map-canvas"></div>
-
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
+  <div id="map-canvas"></div>
+
   
   
   <!-- +++++ Footer Section +++++ -->
