added text to lunch.

--- a/lunch.html
+++ b/lunch.html
@@ -59,7 +59,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Lunch On!</h3>
         <hr>
-        <p>Currently still under construction.</p>
+        <p>Please allow me to use your current location. This application uses api from Google Maps and Foursquare to chart out a route to a randomly selected restaurant within your area. Source code can be found <a href="https://github.com/GrantStampfli/foursquare-API">here</a>.</p>
       </div>
     </div>
     <div class="row mt centered"> 
@@ -70,10 +70,10 @@
         <div class="address"></div>
         <button type="submit" id="reload">Click HERE! Let's Load more results!</button>
         <div class="img"></div>
+        <div id="map-canvas"></div>
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
-  <div id="map-canvas"></div>
 
   
   
