added flickr to projects.

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 				<p>Swap-tacular</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
+				<a class="zoom green" href="lunch.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
 				<p>LunchOn!</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
+				<a class="zoom green" href="flickr.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
 				<p>Infinite Interesting Scroll</p>
 			</div>
 		</div><!-- /row -->
