adding few finishing touches to flickr.

--- a/flickr.html
+++ b/flickr.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Work1</title>
+    <title>Flickr</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -57,9 +57,9 @@
   <div class="container pt">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>PROJECT NAME</h3>
+        <h3>Infinite Interesting Scroll</h3>
         <hr>
-        <p>Currently still under construction.</p>
+        <p>Using Flickr's api to generate a quasi-infinite scroll of most interesting photos. Source code can be found <a href="https://github.com/GrantStampfli/api-rest/tree/master">here</a>.</p>
       </div>
     </div>
     <div class="flickr photos"> 
