--- a/lunch.html
+++ b/lunch.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Lunch</title>
+    <title>LunchOn!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -57,7 +57,7 @@
   <div class="container pt">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>Lunch On!</h3>
+        <h3>LunchOn!</h3>
         <hr>
         <p>Please allow me to use your current location. This application uses api from Google Maps and Foursquare to chart out a route to a randomly selected restaurant within your area. Source code can be found <a href="https://github.com/GrantStampfli/foursquare-API">here</a>.</p>
       </div>
