--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<div class="container pt">
 		<div class="row mt centered">	
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
+				<a class="zoom green" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
 				<p>Swap-tacular</p>
 			</div>
 			<div class="col-lg-4">
