--- a/lunch.html
+++ b/lunch.html
@@ -101,8 +101,8 @@
         </div><!-- /col-lg-4 -->
         
         <div class="col-lg-4">
-          <h4>About This Site</h4>
-          <p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
+          <h4>About This Project</h4>
+          <p>This is built with jQuery.</p>
         </div><!-- /col-lg-4 -->
       
       </div>
