--- a/swaptacular.html
+++ b/swaptacular.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Flickr</title>
+    <title>Swap-Tacular</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -57,12 +57,21 @@
   <div class="container pt">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>Infinite Interesting Scroll</h3>
+        <h3>Swap-Tacular</h3>
         <hr>
-        <p>Using Flickr's api to generate a quasi-infinite scroll of most interesting photos. Source code can be found <a href="https://github.com/GrantStampfli/api-rest/tree/master">here</a>.</p>
+        <p>The essence of this application is Craigslist meet Tinder. A cloud bazaar for users to trade, swap, share their things. The minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>. Source code for latest version can be found <a href="https://github.com/arielspear/swap-tacular/tree/tian">here</a>.</p>
+        <ul>Features include:
+          <li>User Authentification</li>
+          <li>Posts and Comments</li>
+          <li>Google Map Address</li>
+          <li>Uploading Photos</li>
+        </ul>
+        <p>The inspiration for this project came from the sharing culture and more specifically <a href="http://www.bbc.com/news/world-europe-28103695">this article</a>.</p>
       </div>
     </div>
-    <div class="flickr photos"> 
+    <div class="row mt centered"> 
+      <div class="col-lg-8 col-lg-offset-2">
+      </div>
     </div><!-- /row -->
   </div><!-- /container -->
   
@@ -92,7 +101,7 @@
         
         <div class="col-lg-4">
           <h4>About This Project</h4>
-          <p>This is build with jQuery.</p>
+          <p>This is my capstone project, built with Node.js and Express.js in the back-end, persisted with Bookshelf.js and Knex.js, and covered with Ember.js and Data on the front-end.</p>
         </div><!-- /col-lg-4 -->
       
       </div>
@@ -106,6 +115,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/navscrollfloat.js"></script>
-    <script src="assets/js/flickr.js"></script>
   </body>
 </html>
