--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
   <div class="container pt">
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
+        <a class="zoom green" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
         <p>Swap-tacular</p>
       </div>
       <div class="col-lg-4">
@@ -110,8 +110,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About This Site</h4>
-					<p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
+					<h4>About My Projects</h4>
+					<p>I constructed these projects in the three months of JavaScript immersion class. Zero technical background beforehand.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
