added a page for sudoku.

--- a/flickr.html
+++ b/flickr.html
@@ -92,7 +92,7 @@
         
         <div class="col-lg-4">
           <h4>About This Project</h4>
-          <p>This is build with jQuery.</p>
+          <p>This is built with jQuery.</p>
         </div><!-- /col-lg-4 -->
       
       </div>
