--- a/work01.html
+++ b/work01.html
@@ -94,7 +94,7 @@
 				
 				<div class="col-lg-4">
 					<h4>About This Site</h4>
-					<p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
+					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
