--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div><!-- /row -->
 		<div class="row mt centered">	
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
+				<a class="zoom green" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
 				<p>Sudoku Solver</p>
 			</div>
 			<div class="col-lg-4">
@@ -92,8 +92,8 @@
 				<p>Static Site Generator</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
-				<p>CHIEFS</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
+				<p>Future Project</p>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
@@ -124,7 +124,7 @@
 				
 				<div class="col-lg-4">
 					<h4>About This Site</h4>
-					<p>This is a site build using bootstrap and template to make everything look nice and pretty.</p>
+					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
