--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
     </div><!-- /row -->
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
+        <a class="zoom green" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
         <p>Sudoku Solver</p>
       </div>
       <div class="col-lg-4">
@@ -79,8 +79,8 @@
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
-        <p>CHIEFS</p>
+        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
+        <p>Future Project</p>
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
