more edits and changes to about page also new page for sitegen.

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 		<div class="row mt">
 			<div class="col-lg-6">
 				<h4>THE THINKING</h4>
-				<p>If you got this far and are still reading this, let me thank you for your curiousity and patience. If you simply scrolled down to this section, I oblige you to take a moment and learn a little about <a href="#">me</a>.</p>
+				<p>If you got this far and are still reading this, let me thank you for your curiousity and patience. If you simply scrolled down to this section, I oblige you to take a moment and learn a little about <a href="#">me</a>. Should you find me interesting feel free to contact me.</p>
 			</div><!-- /colg-lg-6 -->
 			
 			<div class="col-lg-6">
