--- a/contact.html
+++ b/contact.html
@@ -90,8 +90,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About This Site</h4>
-					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
+					<h4>About This Form</h4>
+					<p>Instead of setting up my own form, queries, and cloud storage, I opted for Google's help. I am aware that developing consists of many trade-offs. Here in my case, I sacrificed some UX for expediency and covenience.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
