--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<p>Sudoku Solver</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="https://www.npmjs.org/package/static-site-generator-"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
+				<a class="zoom green" href="static.html"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
 				<p>Static Site Generator</p>
 			</div>
 			<div class="col-lg-4">
