--- a/static.html
+++ b/static.html
@@ -59,7 +59,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Static Site Generator</h3>
         <hr>
-        <p>Currently still under construction.</p>
+        <p>Simple static site generator. Full testing coverage and published to <a href="https://www.npmjs.org/package/static-site-generator-">NPM</a>. Source code can be found <a href="https://github.com/songty/Static-site-generator">here</a>.</p>
       </div>
     </div>
     <div class="row mt centered"> 
@@ -93,8 +93,8 @@
         </div><!-- /col-lg-4 -->
         
         <div class="col-lg-4">
-          <h4>About This Site</h4>
-          <p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
+          <h4>About This Project</h4>
+          <p>Also one of my first projects. Fun fact - callback finally clicked for me during this period.</p>
         </div><!-- /col-lg-4 -->
       
       </div>
