more transparency on overlay and changed hover color to blue.

--- a/work.html
+++ b/work.html
@@ -57,29 +57,29 @@
   <div class="container pt">
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
+        <a class="zoom blue" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
         <p>Swap-tacular</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="lunch.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
+        <a class="zoom blue" href="lunch.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
         <p>LunchOn!</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="flickr.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
+        <a class="zoom blue" href="flickr.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
         <p>Infinite Interesting Scroll</p>
       </div>
     </div><!-- /row -->
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom green" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
+        <a class="zoom blue" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
         <p>Sudoku Solver</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="static.html"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
+        <a class="zoom blue" href="static.html"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
+        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
         <p>Future Project</p>
       </div>
     </div><!-- /row -->
