changed header to be more consistent.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</div>
 			<div class="col-lg-4">
 				<a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
-				<p>Future Project</p>
+				<p>This Website</p>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
