--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Portfolio</title>
+    <title>Tian - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -80,7 +80,7 @@
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
-        <p>Future Project</p>
+        <p>This Website</p>
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
