more fine-tuning.

--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Address</h4>
+					<h4>My Contacts</h4>
           <p>
-            Some Number,<br/>
-            Some Street, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
             Portland, OR.
           </p>
 				</div><!-- /col-lg-4 -->
@@ -90,8 +90,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About This Form</h4>
-					<p>Instead of setting up my own form, queries, and cloud storage, I opted for Google's help. I am aware that developing consists of many trade-offs. Here in my case, I sacrificed some UX for expediency and covenience.</p>
+					<h4>This Form</h4>
+					<p>I am aware that developing consists of many trade-offs such as sometimes sacrificing UX for expediency.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
