--- a/lunch.html
+++ b/lunch.html
@@ -83,10 +83,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h4>My Address</h4>
+          <h4>My Contacts</h4>
           <p>
-            Some Number,<br/>
-            Some Street, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
             Portland, OR.
           </p>
         </div><!-- /col-lg-4 -->
@@ -101,7 +101,7 @@
         </div><!-- /col-lg-4 -->
         
         <div class="col-lg-4">
-          <h4>About This Project</h4>
+          <h4>This Project</h4>
           <p>This is built with jQuery.</p>
         </div><!-- /col-lg-4 -->
       
