--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
+        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="" /></a>
         <p>This Website</p>
       </div>
     </div><!-- /row -->
@@ -92,10 +92,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Address</h4>
+					<h4>My Contacts</h4>
           <p>
-            Some Number,<br/>
-            Some Street, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
             Portland, OR.
           </p>
 				</div><!-- /col-lg-4 -->
@@ -110,8 +110,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About My Projects</h4>
-					<p>I constructed these projects in the three months of JavaScript immersion class. Zero technical background beforehand.</p>
+					<h4>My Projects</h4>
+					<p>I constructed these projects in the three months of JavaScript immersion class at <a href="http://portlandcodeschool.github.io/jsi/">Portland Code School</a>.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
