--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<img src="assets/img/user.png" alt="Stanley">
-					<h1>Hello, this is Tian. Site is still under constructions.</h1>
+					<img src="assets/img/user.png" alt="Tian">
+					<h1>Hello, this is Tian.</h1>
 					<p>Greetings. I'm an aspiring web app developer. This is my simple website to showcase my work.</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
@@ -92,7 +92,7 @@
 				<p>Static Site Generator</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/placeholder.jpg" alt="" /></a>
+				<a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="" /></a>
 				<p>This Website</p>
 			</div>
 		</div><!-- /row -->
@@ -105,10 +105,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Address</h4>
+					<h4>My Contacts</h4>
           <p>
-            Some Number,<br/>
-            Some Street, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
             Portland, OR.
           </p>
 				</div><!-- /col-lg-4 -->
@@ -123,8 +123,8 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About This Site</h4>
-					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
+					<h4>This Site</h4>
+					<p>This is a site built using bootstrap and a template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
