--- a/swaptacular.html
+++ b/swaptacular.html
@@ -82,10 +82,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h4>My Address</h4>
+          <h4>My Contacts</h4>
           <p>
-            Some Number,<br/>
-            Some Street, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
             Portland, OR.
           </p>
         </div><!-- /col-lg-4 -->
@@ -100,7 +100,7 @@
         </div><!-- /col-lg-4 -->
         
         <div class="col-lg-4">
-          <h4>About This Project</h4>
+          <h4>This Project</h4>
           <p>This is my capstone project, built with Node.js and Express.js in the back-end, persisted with Bookshelf.js and Knex.js, and covered with Ember.js and Data on the front-end.</p>
         </div><!-- /col-lg-4 -->
       
