--- a/work01.html
+++ b/work01.html
@@ -75,12 +75,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Address</h4>
-					<p>
-						Some Number,<br/>
-						Some Street, <br/>
-						Portland, OR.
-					</p>
+					<h4>My Contacts</h4>
+          <p>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
+            Message: <a href="contact.html">Tian</a>, <br/>
+            Portland, OR.
+          </p>
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
@@ -93,7 +93,7 @@
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About This Site</h4>
+					<h4>This Site</h4>
 					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
