removed public todo.

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Questions?</h3>
 				<hr>
-				<p>TODO: Find alternative for form submit or tweak Google's iframe/form service. Perhaps query Google drive like a database?</p>
+				<p>Please feel free to reach out to me. How can I be of service to you?</p>
         <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dFBVSEpHSVNfYzd2Y3Q4S09Gbm1Dd3c6MA" width="760" height="649" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			</div>
 		</div>
