added columns for swap-tacular

--- a/swaptacular.html
+++ b/swaptacular.html
@@ -59,14 +59,19 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Swap-Tacular</h3>
         <hr>
-        <p>The essence of this application is Craigslist meet Tinder. A cloud bazaar for users to trade, swap, share their things. The minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>. Source code for latest version can be found <a href="https://github.com/arielspear/swap-tacular/tree/tian">here</a>.</p>
-        <ul>Features include:
-          <li>User Authentification</li>
-          <li>Posts and Comments</li>
-          <li>Google Map Address</li>
-          <li>Uploading Photos</li>
-        </ul>
-        <p>The inspiration for this project came from the sharing culture and more specifically <a href="http://www.bbc.com/news/world-europe-28103695">this article</a>.</p>
+        <div class="col-2">
+          <div><p>The essence of this application is Craigslist meet Tinder. A cloud bazaar for users to trade, swap, share their things. Minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>.</p></div>
+          <div>
+            <h4>Features:</h3>
+            <ul>
+              <li><strong>User Authentification</strong></li>
+              <li><strong>Posts and Comments</strong></li>
+              <li><strong>Google Map Address</strong></li>
+              <li><strong>Uploading Photos</strong></li>
+            </ul>
+          </div>
+        </div>
+        <p>Source code for latest version can be found <a href="https://github.com/arielspear/swap-tacular/tree/tian">here</a>. The inspiration for this project came from the sharing culture and more specifically <a href="http://www.bbc.com/news/world-europe-28103695">this article</a>.</p>
       </div>
     </div>
     <div class="row mt centered"> 
@@ -100,8 +105,8 @@
         </div><!-- /col-lg-4 -->
         
         <div class="col-lg-4">
-          <h4>This Project</h4>
-          <p>This is my capstone project, built with Node.js and Express.js in the back-end, persisted with Bookshelf.js and Knex.js, and covered with Ember.js and Data on the front-end.</p>
+          <h4>This Capstone Project</h4>
+          <p>Built with Express.js in the back, Bookshelf.js and Knex.js for persistence, and Ember.js on the front.</p>
         </div><!-- /col-lg-4 -->
       
       </div>
